--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/ic_icon"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:name=".activity.MyApp"
+        android:theme="@style/AppTheme_dog">
         <activity
             android:name=".activity.LaunchActivity"
             android:theme="@style/LaunchTheme">
@@ -28,7 +29,10 @@
             android:name=".ui.login.LoginActivity"
             android:label="@string/title_activity_login"
             android:theme="@style/FullScreenTheme" />
-        <activity android:name=".activity.MainActivity"></activity>
+        <activity android:name=".activity.MainActivity"
+            android:launchMode="singleTask"/>
+        <activity android:name=".activity.ChangeFavoriteActivity"
+            android:theme="@style/translucent"/>
     </application>
 
 </manifest>
