--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,20 +5,30 @@
     <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
 
     <application
+        android:name=".activity.MyApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_icon"
         android:label="@string/app_name"
         android:roundIcon="@drawable/ic_icon"
         android:supportsRtl="true"
-        android:name=".activity.MyApp"
         android:theme="@style/AppTheme_dog">
+        <!--<activity-->
+        <!--android:name=".activity.LaunchActivity"-->
+        <!--android:theme="@style/LaunchTheme">-->
+        <!--<intent-filter>-->
+        <!--<action android:name="android.intent.action.MAIN" />-->
+
+        <!--<category android:name="android.intent.category.LAUNCHER" />-->
+        <!--</intent-filter>-->
+        <!--</activity>-->
+        <activity android:name=".activity.LaunchActivity" />
         <activity
-            android:name=".activity.LaunchActivity"
-            android:theme="@style/LaunchTheme">
+            android:name=".activity.MainActivity"
+            android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -28,10 +38,9 @@
         <activity
             android:name=".ui.login.LoginActivity"
             android:theme="@style/FullScreenTheme" />
-        <activity android:name=".activity.MainActivity"
-            android:launchMode="singleTask"/>
-        <activity android:name=".activity.ChangeFavoriteActivity"
-            android:theme="@style/translucent"/>
+        <activity
+            android:name=".activity.ChangeFavoriteActivity"
+            android:theme="@style/translucent" />
     </application>
 
 </manifest>
