完善主页面UI、图标，增加内存泄漏检测，完善网络日志记录功能，优化部分代码

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,15 +16,17 @@
         android:roundIcon="@drawable/ic_icon"
         android:supportsRtl="true"
         android:theme="@style/AppTheme_dog">
-        <!--<activity-->
-        <!--android:name=".activity.LaunchActivity"-->
-        <!--android:theme="@style/LaunchTheme">-->
-        <!--<intent-filter>-->
-        <!--<action android:name="android.intent.action.MAIN" />-->
 
-        <!--<category android:name="android.intent.category.LAUNCHER" />-->
-        <!--</intent-filter>-->
-        <!--</activity>-->
+        <!-- <activity -->
+        <!-- android:name=".activity.LaunchActivity" -->
+        <!-- android:theme="@style/LaunchTheme"> -->
+        <!-- <intent-filter> -->
+        <!-- <action android:name="android.intent.action.MAIN" /> -->
+
+
+        <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+        <!-- </intent-filter> -->
+        <!-- </activity> -->
         <activity android:name=".activity.LaunchActivity" />
         <activity
             android:name=".activity.MainActivity"
@@ -44,6 +46,7 @@
         <activity
             android:name=".activity.ChangeFavoriteActivity"
             android:theme="@style/translucent" />
+        <activity android:name=".activity.MyPetsActivity"></activity>
     </application>
 
 </manifest>
