--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,14 @@ dependencies {
 
     implementation 'com.youth.banner:banner:1.4.9'
 
+    //地点选择器
+    implementation 'com.github.ywp0919:AddressPickerLib:1.0.1'
+
+    //日志打印
+    implementation 'com.orhanobut:logger:2.2.0'
+
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.6.1'
+    releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.6.1'
+    // Optional, if you use support library fragments:
+    debugImplementation 'com.squareup.leakcanary:leakcanary-support-fragment:1.6.1'
 }
