--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,7 @@ greendao{
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     implementation 'com.android.support:design:27.1.1'
@@ -46,7 +46,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.github.bumptech.glide:glide:4.7.1'
-    implementation 'com.google.code.gson:gson:2.8.5'//Gson 库
+    implementation 'com.google.code.gson:gson:2.8.5'
+    //Gson 库
     implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
     implementation 'com.squareup.okhttp3:okhttp:3.9.1'
     //下面是RxJava 和 RxAndroid
@@ -58,25 +59,20 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
     //转换器 将结果通过gson将json串转换为model
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
-
     implementation 'com.youth.banner:banner:1.4.9'
-
     //地点选择器
     implementation 'com.github.ywp0919:AddressPickerLib:1.0.1'
-
     //日志打印
     implementation 'com.orhanobut:logger:2.2.0'
-
     //泄漏检测
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.6.1'
     releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.6.1'
     // Optional, if you use support library fragments:
     debugImplementation 'com.squareup.leakcanary:leakcanary-support-fragment:1.6.1'
-
-//  EventBus使用：1、导入eventbus和索引
+    //  EventBus使用：1、导入eventbus和索引
     implementation 'org.greenrobot:eventbus:3.1.1'
     annotationProcessor 'org.greenrobot:eventbus-annotation-processor:3.1.0'
-
     //greendao配置 4、导入依赖
     implementation 'org.greenrobot:greendao:3.2.2'
+    implementation 'com.android.support:cardview-v7:27.1.1'
 }
