--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,8 +29,7 @@
         <!-- </activity> -->
         <activity android:name=".activity.LaunchActivity" />
         <activity
-            android:name=".activity.MainActivity"
-            android:launchMode="singleTask">
+            android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -50,7 +49,7 @@
         <activity android:name=".ui.goods_list.GoodsListActivity" />
         <activity android:name=".activity.GoodsList" />
         <activity android:name=".activity.ManageAddressActivity" />
-        <activity android:name=".activity.EditAddressActivity"></activity>
+        <activity android:name=".activity.EditAddressActivity"/>
     </application>
 
 </manifest>
