--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
     <application
         android:name=".activity.MyApp"
         android:allowBackup="true"
@@ -50,7 +52,7 @@
         <activity android:name=".activity.ManageAddressActivity" />
         <activity android:name=".activity.EditAddressActivity" />
         <activity android:name=".ui.order.OrderActivity" />
-        <activity android:name=".activity.AddPetActivity"></activity>
+        <activity android:name=".activity.AddPetActivity"/>
     </application>
 
 </manifest>
