完成服务订单的评论功能及页面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,7 +61,8 @@
         <activity android:name=".activity.ServiceListActivity" />
         <activity android:name=".activity.ServerOrderActivity" />
         <activity android:name=".activity.UserInfoActivity" />
-        <activity android:name=".activity.OrderServerActivity"></activity>
+        <activity android:name=".activity.OrderServerActivity" />
+        <activity android:name=".activity.CommentServerActivity"></activity>
     </application>
 
 </manifest>
