集成一个图文混排控件，实现发布帖子、查看帖子、帖子详情、查看帖子评论

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,7 +62,10 @@
         <activity android:name=".activity.ServerOrderActivity" />
         <activity android:name=".activity.UserInfoActivity" />
         <activity android:name=".activity.OrderServerActivity" />
-        <activity android:name=".activity.CommentServerActivity"></activity>
+        <activity android:name=".activity.CommentServerActivity" />
+        <activity android:name=".activity.AddThemeActivity" />
+        <activity android:name=".activity.ThemeDetailActivity" />
+        <activity android:name=".activity.CommentThemeActivity"></activity>
     </application>
 
 </manifest>
