--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,4 +85,6 @@ dependencies {
     //greendao配置 4、导入依赖
     implementation 'org.greenrobot:greendao:3.2.2'
     implementation 'com.android.support:cardview-v7:27.1.1'
+    implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-alpha-16'
+    implementation project(':d')
 }
