完成个人信息的修改，登录、退出登录逻辑流程的构建以及修复已知的缺陷

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,25 +20,27 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme_dog">
 
-        <!-- <activity -->
-        <!-- android:name=".activity.LaunchActivity" -->
-        <!-- android:theme="@style/LaunchTheme"> -->
-        <!-- <intent-filter> -->
-        <!-- <action android:name="android.intent.action.MAIN" /> -->
-
-
-        <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
-        <!-- </intent-filter> -->
-        <!-- </activity> -->
-        <!-- <activity android:name=".activity.MainActivity" /> -->
-        <activity android:name=".activity.LaunchActivity" />
-        <activity android:name=".activity.MainActivity">
+        <activity
+            android:name=".activity.LaunchActivity"
+            android:theme="@style/LaunchTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activity.MainActivity" />
+        <!--<activity android:name=".activity.LaunchActivity" />-->
+        <!--<activity android:name=".activity.MainActivity">-->
+        <!--<intent-filter>-->
+        <!--<action android:name="android.intent.action.MAIN" />-->
+
+        <!--<category android:name="android.intent.category.LAUNCHER" />-->
+        <!--</intent-filter>-->
+        <!--</activity>-->
+
+
         <activity
             android:name=".ui.login.LoginActivity"
             android:theme="@style/FullScreenTheme" />
