--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,4 +87,7 @@ dependencies {
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-alpha-16'
     implementation project(':d')
+
+    implementation "com.qiniu:happy-dns:0.2.5"
+    implementation "com.qiniu:qiniu-android-sdk:7.3.1"
 }
